external-crates/move/move-compiler/tests/move_2024/typing/module_call_visibility_package_invalid.exp
error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:16:52
   │
 5 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same package as module '0x2::X'
   ·
16 │     public(package) fun f_package_call_package() { X::f_pkg_public() }
   │                                                    ^^^^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:17:42
   │
 5 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same package as module '0x2::X'
   ·
17 │     public fun f_public_call_package() { X::f_pkg_public() }
   │                                          ^^^^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:18:36
   │
 5 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same package as module '0x2::X'
   ·
18 │     fun f_private_call_package() { X::f_pkg_public() }
   │                                    ^^^^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:25:50
   │
 5 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same package as module '0x2::X'
   ·
25 │     public(friend) fun f_friend_call_package() { X::f_pkg_public() }
   │                                                  ^^^^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:26:42
   │
 5 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same package as module '0x2::X'
   ·
26 │     public fun f_public_call_package() { X::f_pkg_public() }
   │                                          ^^^^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:27:36
   │
 5 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same package as module '0x2::X'
   ·
27 │     fun f_private_call_package() { X::f_pkg_public() }
   │                                    ^^^^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_pkg_public'

